Fix collapsing of page's search form elements
The page's search form would always be collapsed, even if the
viewport width was wide enough to accomodate an uncollapsed
layout.

--- a/styles/sass/_form.scss
+++ b/styles/sass/_form.scss
@@ -61,7 +61,9 @@ textarea {
 	cursor: default;
 }
 .search-field {
+	display: inline-block;
 	position: relative;
+	vertical-align: middle;
 }
 
 
